Fixes 13 - Changes line height to 1.3 on mobile/smaller screens.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2738,7 +2738,7 @@ footer {
   $subtitlelh: 53px;
 
   $tetfz: 14px;
-  $textlh: 1;
+  $textlh: 1.3;
 
   .kimono_logo {
     height: 20px;
